--- a/source/form.html
+++ b/source/form.html
@@ -61,12 +61,14 @@
         <legend class="form__legend fieldset-type__legend">Тип</legend>
         <ul class="form__list fieldset-type__list">
           <li class="form__option fieldset-type__option">
-            <input class="form__field fieldset-type__field" type="radio" name="type" id="type-accessory" value="accessory">
+            <input class="visually-hidden form__field fieldset-type__field" type="radio" name="type" id="type-accessory" value="accessory">
             <label class="form__label fieldset-type__label" for="type-accessory">Аксессуар для интерьера</label>
+            <p class="form__indicator fieldset-type__indicator"></p>
           </li>
           <li class="form__option fieldset-type__option">
-            <input class="form__field fieldset-type__field" type="radio" name="type" id="type-toy" value="toy">
+            <input class="visually-hidden form__field fieldset-type__field" type="radio" name="type" id="type-toy" value="toy">
             <label class="form__label fieldset-type__label" for="type-toy">Детская игрушка</label>
+            <p class="form__indicator fieldset-type__indicator"></p>
           </li>
         </ul>
       </fieldset>
@@ -75,28 +77,34 @@
         <legend class="form__legend fieldset-color__legend">Цвет</legend>
         <ul class="form__list fieldset-color__list">
           <li class="form-option fieldset-color__option">
-            <input class="form__field fieldset-color__field" type="checkbox" name="white" id="checkbox-white" checked>
+            <input class="visually-hidden form__field fieldset-color__field" type="checkbox" name="white" id="checkbox-white" checked>
             <label class="form__label fieldset-color__label" for="checkbox-white">Белый</label>
+            <p class="form__indicator fieldset-color__indicator"></p>
           </li>
           <li class="form-option fieldset-color__option">
-            <input class="form__field fieldset-color__field" type="checkbox" name="grey" id="checkbox-grey" checked>
+            <input class="visually-hidden form__field fieldset-color__field" type="checkbox" name="grey" id="checkbox-grey" checked>
             <label class="form__label fieldset-color__label" for="checkbox-grey">Серый</label>
+            <p class="form__indicator fieldset-color__indicator"></p>
           </li>
           <li class="form-option fieldset-color__option">
-            <input class="form__field fieldset-color__field" type="checkbox" name="tiffany" id="checkbox-tiffany">
+            <input class="visually-hidden form__field fieldset-color__field" type="checkbox" name="tiffany" id="checkbox-tiffany">
             <label class="form__label fieldset-color__label" for="checkbox-tiffany">«Тиффани»</label>
+            <p class="form__indicator fieldset-color__indicator"></p>
           </li>
           <li class="form-option fieldset-color__option">
-            <input class="form__field fieldset-color__field" type="checkbox" name="black" id="checkbox-black">
-            <label class="form__label fieldset-color__label" for="checkbox-black">Ченый</label>
+            <input class="visually-hidden form__field fieldset-color__field" type="checkbox" name="black" id="checkbox-black">
+            <label class="form__label fieldset-color__label" for="checkbox-black">Черный</label>
+            <p class="form__indicator fieldset-color__indicator"></p>
           </li>
           <li class="form-option fieldset-color__option">
-            <input class="form__field fieldset-color__field" type="checkbox" name="pink" id="checkbox-pink">
+            <input class="visually-hidden form__field fieldset-color__field" type="checkbox" name="pink" id="checkbox-pink">
             <label class="form__label fieldset-color__label" for="checkbox-pink">Розовый</label>
+            <p class="form__indicator fieldset-color__indicator"></p>
           </li>
           <li class="form-option fieldset-color__option">
-            <input class="form__field fieldset-color__field" type="checkbox" name="orange" id="checkbox-orange">
+            <input class="visually-hidden form__field fieldset-color__field" type="checkbox" name="orange" id="checkbox-orange">
             <label class="form__label fieldset-color__label" for="checkbox-orange">Оранжевый</label>
+            <p class="form__indicator fieldset-color__indicator"></p>
           </li>
         </ul>
       </fieldset>
@@ -122,11 +130,20 @@
       <div class="form__field-tel field-tel">
         <label class="form__legend field-tel__legend">Тел</label>
         <input class="form__field field-tel__field" type="tel" name="phone" placeholder="+7 XXX XXX XX XX*" required>
+        <svg class="field-tel__icon" x="0px" y="0px" width="25px" height="24px" viewBox="0 0 24.829 24.333" enable-background="new 0 0 24.829 24.333" xml:space="preserve">
+          <path fill="" d="M17.321,24.333c-0.371,0-0.744,0-1.115,0c-4.904-0.58-8.497-2.857-11.11-5.772C2.473,15.637,0.402,11.875,0,6.817 c0-0.453,0-0.906,0-1.358c0.091-0.921,0.544-1.55,1.067-2.086c0.65-0.666,1.63-1.522,2.522-1.553 c0.659-0.022,1.78,0.451,2.232,1.066c0.388,0.53,0.595,1.59,0.775,2.378c0.185,0.797,0.6,1.95,0.485,2.717 C6.905,9.177,5.317,9.684,4.85,10.553c1.551,3.721,4.089,6.456,7.472,8.345c0.847-0.465,1.595-1.864,2.767-1.892 c0.428-0.012,0.972,0.209,1.406,0.34c0.477,0.143,0.891,0.326,1.311,0.484c0.705,0.266,1.957,0.621,2.378,1.213 c0.433,0.61,0.681,1.608,0.581,2.231C20.571,22.508,18.538,23.877,17.321,24.333z"/>
+          <path fill="" d="M12.529,1.528c5.949,0,10.771,4.822,10.771,10.771h1.529C24.829,5.507,19.323,0,12.529,0V1.528z"/>
+          <path fill="" d="M12.529,9.327v1.552c0.785,0,1.421,0.636,1.421,1.42h1.553C15.502,10.657,14.172,9.327,12.529,9.327z"/>
+          <path fill="" d="M12.529,6.246c3.345,0,6.056,2.71,6.056,6.054h1.588c0-4.22-3.422-7.641-7.644-7.641V6.246z"/>
+        </svg>
       </div>
 
       <div class="form__field-email field-email">
         <label class="form__legend field-email__legend">E-mail</label>
         <input class="form__field field-email__field" type="email" name="email" placeholder="Ваш Email*" required>
+        <svg class="field-email__icon" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+          <path fill="#000000" d="M28,5H4C1.791,5,0,6.792,0,9v13c0,2.209,1.791,4,4,4h24c2.209,0,4-1.791,4-4V9 C32,6.792,30.209,5,28,5z M2,10.25l6.999,5.25L2,20.75V10.25z M30,22c0,1.104-0.898,2-2,2H4c-1.103,0-2-0.896-2-2l7.832-5.875 l4.368,3.277c0.533,0.397,1.166,0.6,1.8,0.6c0.633,0,1.266-0.201,1.799-0.6l4.369-3.277L30,22L30,22z M30,20.75l-7-5.25l7-5.25 V20.75z M17.199,18.602c-0.35,0.263-0.763,0.4-1.199,0.4s-0.851-0.139-1.2-0.4L10.665,15.5l-0.833-0.625L2,9.001V9 c0-1.103,0.897-2,2-2h24c1.102,0,2,0.897,2,2L17.199,18.602z"/>
+        </svg>
       </div>
 
       <div class="form__field-info field-info">
